--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+poetry.lock
+
 __pycache__/
 *.py[cod]
 *.pyo
@@ -18,7 +20,6 @@ ENV/
 .python-version
 
 
-# Testing/coverage
 .pytest_cache/
 .coverage
 .coverage.*
