--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 api = your_api
 #This is a crucial file: here you insert your bot's api from @BotFather.
 #You need to rename this file to .env (use: mv .env.example .env)
+#Updated August 29th 2025
